trunk/Archive2/9d/35fab1832f4b92/output
main.cpp: In function 'int main()':
main.cpp:22:22: error: invalid conversion from 'char**' to 'const char**' [-fpermissive]
 const char ** cpp = &p; // HUGE HORRIFYING BARF
                      ^
main.cpp:21:9: warning: unused variable 'pp' [-Wunused-variable]
 char ** pp = &p; // Still ok.
         ^
main.cpp:22:15: warning: unused variable 'cpp' [-Wunused-variable]
 const char ** cpp = &p; // HUGE HORRIFYING BARF
               ^
